@@ -1,3 +1,8 @@
+2007-04-24  Katsumi Yamaoka  <yamaoka@jpl.org>
+
+	* mime-edit.el (turn-on-mime-edit): Make paragraph-start and
+	paragraph-separate buffer-local.
+
 2006-12-20  MORIOKA Tomohiko  <tomo@kanji.zinbun.kyoto-u.ac.jp>
 
 	* README.ja, README.en (Required environment): Update required
